--- a/prim-strategies.org
+++ b/prim-strategies.org
@@ -1333,7 +1333,7 @@ need to weigh in on the question when the existence of God barely
 elicits a shrug anymore.... Even PKD didn't see that one coming.
 
 We need facts and truth to scale to global industrial scales -- so
-that not matter how many facts are asserted; not millions, or billions
+that no matter how many facts are asserted; not millions, or billions
 but trillions just for starters, that we have a trustless framework
 for determining what assertions are facts which we know within a range
 of certainty are true or not.
@@ -1344,11 +1344,20 @@ of certainty are true or not.
    quietly and systematically undermined the collective grasp of what
    is true. There have always been people and groups who have tried to
    do this, but technology as made it possible to refine and roll out
-   these techniques on a scale that few understand.  Trump is so inept
-   and patently dimwitted that when he uses these same techniques,
-   people see through them.  It is hoped that this is the crack in the
-   seawall that will eventually bring it all down and level the
-   playing field for everyone.
+   these techniques on a scale that few comprehend, even to those who
+   are doing it.  Trump is so inept and patently dimwitted that when
+   he uses these same techniques, people see through them.  It is
+   hoped that this is the crack in the seawall that will eventually
+   bring it all down and level the playing field for everyone.
+
+That sounds like a tall order, but it's not -- that's what our brains
+are doing constantly, looking for patterns and determining if they
+match or not and their level of certainty.  We just need to
+externalize, network and scale it so that the Web is no longer a
+semi-structured pile of steaming information, but a pillar of
+interconnected facts that weave all of that information into something
+that we can trust and rely on even though we don't trust anyone....
+
 
 * Shop chains
 
