edit ebola paragraph

--- a/prim-strategies.org
+++ b/prim-strategies.org
@@ -1345,10 +1345,11 @@ of certainty are true or not.
    is true. There have always been people and groups who have tried to
    do this, but technology as made it possible to refine and roll out
    these techniques on a scale that few comprehend, even to those who
-   are doing it.  Trump is so inept and patently dimwitted that when
-   he uses these same techniques, people see through them.  It is
-   hoped that this is the crack in the seawall that will eventually
-   bring it all down and level the playing field for everyone.
+   are doing it.  Trump is so inept and patently dimwitted that his
+   attempts to use these same techniques are seen for what they are.
+   It is hoped that this is the crack in the seawall that will
+   eventually bring it all down and level the playing field for
+   everyone.
 
 That sounds like a tall order, but it's not -- that's what our brains
 are doing constantly, looking for patterns and determining if they
