--- a/prim-strategies.org
+++ b/prim-strategies.org
@@ -1321,16 +1321,17 @@ nothing more than information.  So whatever happens with money and
 transactions will quickly spill over and encompass any and every kind
 of information.
 
-We, as individuals are grasping at smoke, that shifts defies solidity.
-The basic information that we need to survive as individuals and as a
-civilization is increasingly in the hands of a tiny percentage of
-people.  We're all living in a Philip K. Dick novel where we don't
-know what is real, or even who or what we are.  It's telling that the
-idea that the universe is a simulation, like in the Matrix film
-Trilogy films, is actually so close to being plausible, that an
-increasing number of the brightest scientists on the planet feel the
-need to weigh in on the question when the existence of God barely
-elicits a shrug anymore.... Even PKD didn't see that one coming.
+We, as individuals are grasping at smoke, that constantly shifts,
+defying solidity.  The basic information that we need to survive as
+individuals and as a civilization is increasingly in the hands of a
+tiny percentage of people.  We're all living in a Philip K. Dick novel
+where we don't know what is real, or even who or what we are.  It's
+telling that the idea that the universe is a simulation, like in the
+Matrix film Trilogy films, is actually so close to being plausible,
+that an increasing number of the brightest scientists on the planet
+feel the need to weigh in on the question, when the existence of God
+barely elicits a shrug anymore.... Even PKD didn't see that one
+coming.
 
 We need facts and truth to scale to global industrial scales -- so
 that no matter how many facts are asserted; not millions, or billions
