--- a/index.org
+++ b/index.org
@@ -56,4 +56,9 @@ Turtles all the way down indeed....
  - [[./prim-naming-conventions.org][Naming Conventions]] 
 
 
- - [[./prim-strategies.org][Strategies for a Distributed Civilization]] 
+ - [[./prim-strategies.org][Strategies for a Distributed Civilization]]
+
+
+ - [[./primer-persons.org][Persons]]
+ - Places
+ - Events 
